force-app/main/default/objects/Product_Family__c/Product_Family__c.object-meta.xml
<CustomObject>
    <description>Custom Object that controls work basket allocation of complaints</description>
    <label>Product Family</label>
    <nameField>
        <label>Product Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Families</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>