force-app/main/default/objects/Product_Family__c/fields/IDR_ANZ_com_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>IDR_ANZ_com_Product_Category__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>Helps Identify the product family based on Product Category of the case</description>
    <label>ANZ.com Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit card</fullName>
            </value>
            <value>
                <fullName>Cheque/Savings accounts</fullName>
            </value>
            <value>
                <fullName>Home loans</fullName>
            </value>
            <value>
                <fullName>Business accounts</fullName>
            </value>
            <value>
                <fullName>Personal loan</fullName>
            </value>
            <value>
                <fullName>Business loans</fullName>
            </value>
            <value>
                <fullName>Insurance/wealth products</fullName>
            </value>
            <value>
                <fullName>Commercial cards</fullName>
            </value>
            <value>
                <fullName>Asset finance</fullName>
            </value>
            <value>
                <fullName>Foreign exchange</fullName>
            </value>
            <value>
                <fullName>Merchants</fullName>
            </value>
            <value>
                <fullName>ANZ Plus</fullName>
            </value>
            <value>
                <fullName>ANZ Internet Banking</fullName>
            </value>
            <value>
                <fullName>Not product related</fullName>
            </value>
            <value>
                <fullName>Deceased Estates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>