force-app/main/default/objects/Product_Family__c/fields/IDR_ANZ_com_Unique_Product_Indicator__c.field-meta.xml
<CustomField>
    <fullName>IDR_ANZ_com_Unique_Product_Indicator__c</fullName>
    <description>Helps ensure there is one to one mapping between the Product categories and product family records </description>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <label>ANZ.com Unique Product Indicator</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>