force-app/main/default/objects/Product_Family__c/fields/IDR_Workbasket__c.field-meta.xml
<CustomField>
    <fullName>IDR_Workbasket__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>WorkBasket that cases with this product family need to be assigned to</description>
    <label>Workbasket</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IDR_Business_Owners</fullName>
                <label>IDR Business Owners</label>
            </value>
            <value>
                <fullName>IDR_Everyday_Banking</fullName>
                <label>IDR Everyday Banking</label>
            </value>
            <value>
                <fullName>IDR_Home_Owners</fullName>
                <label>IDR Home Owners</label>
            </value>
            <value>
                <fullName>IDR_Wealth</fullName>
                <label>IDR Wealth</label>
            </value>
            <value>
                <fullName>Specialised_Early_Resolution_Hardship</fullName>
                <label>Specialised Early Resolution Hardship</label>
            </value>
            <value>
                <fullName>Specialised_EarlyRes_Responsible_Lending</fullName>
                <label>Specialised EarlyRes Responsible Lending</label>
            </value>
            <value>
                <fullName>EDR_Early_Resolution</fullName>
                <label>EDR Early Resolution</label>
            </value>
            <value>
                <fullName>IDR_Hardship</fullName>
                <label>IDR Hardship</label>
            </value>
            <value>
                <fullName>IDR_Responsible_Lending</fullName>
                <label>IDR Responsible Lending</label>
            </value>
            <value>
                <fullName>IDR_CEO</fullName>
                <label>IDR CEO</label>
            </value>
            <value>
                <fullName>IDR_Early_Resolution</fullName>
                <label>IDR Early Resolution</label>
            </value>
            <value>
                <fullName>IDR_ANZ_Plus</fullName>
                <label>IDR ANZ Plus</label>
            </value>
            <value>
                <fullName>IDR_Satellite</fullName>
                <label>IDR Cards</label>
            </value>
            <value>
                <fullName>IDR_Deceased_Estates</fullName>
                <label>IDR Deceased Estates</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>